syntax = "proto3";

package lightops.type;

option csharp_namespace = "LightOps.Commerce.Proto.Types";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "Protos/type/image.proto";

message ContentPageProto {
  // Globally unique identifier, eg: gid://ContentPage/1000
  string id = 1;

  // Globally unique identifier of parent, 'gid://' if none
  string parent_id = 2;

  // A human-friendly unique string for the content page
  string handle = 3;

  // The title of the content page
  string title = 4;

  // The url of the content page
  string url = 5;

  // The type of the content page
  string type = 6;

  // The summary of the content page
  string summary = 7;

  // The timestamp of content page creation
  google.protobuf.Timestamp created_at = 8;

  // The timestamp of the latest content page update
  google.protobuf.Timestamp updated_at = 9;

  // The primary image of the content page
  lightops.type.ImageProto primary_image = 10;
}
